src/DymeAntlr/DymeAntlr/.antlr/dymeParser.java
// Generated from c:\Users\Poliveira\source\repos\DymeAntlr\DymeAntlr\dyme.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dymeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, STRING=49, BOOLEAN=50, INTEGER=51, FLOAT=52, 
		IDENTIFIER=53, WHITESPACE=54, COMMENT=55, LINE_COMMENT=56;
	public static final int
		RULE_block = 0, RULE_loopblock = 1, RULE_stmt = 2, RULE_matchparams = 3, 
		RULE_matchparam = 4, RULE_enums = 5, RULE_expr = 6, RULE_option = 7, RULE_params = 8, 
		RULE_args = 9, RULE_assignArgs = 10, RULE_atom = 11;
	public static final String[] ruleNames = {
		"block", "loopblock", "stmt", "matchparams", "matchparam", "enums", "expr", 
		"option", "params", "args", "assignArgs", "atom"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'return'", "';'", "'}'", "'break'", "'continue'", "'let'", 
		"'='", "'for'", "','", "'::'", "'while'", "'if'", "'else'", "'import'", 
		"'match'", "'mod'", "'type'", "'class'", "'('", "')'", "'.'", "'=>'", 
		"'|'", "'^'", "'->'", "'-?>'", "'*'", "'/'", "'%'", "'+'", "'-'", "'&'", 
		"'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'and'", "'or'", "'new'", 
		"'['", "']'", "'fn'", "'-->'", "'|>'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "STRING", "BOOLEAN", "INTEGER", "FLOAT", "IDENTIFIER", "WHITESPACE", 
		"COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dyme.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dymeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ScopedBlockContext extends BlockContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ScopedBlockContext(BlockContext ctx) { copyFrom(ctx); }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_block);
		int _la;
		try {
			_localctx = new ScopedBlockContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(T__0);
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__30) | (1L << T__31) | (1L << T__41) | (1L << T__42) | (1L << T__44) | (1L << STRING) | (1L << BOOLEAN) | (1L << INTEGER) | (1L << FLOAT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(25);
				stmt();
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(31);
				match(T__1);
				setState(32);
				expr(0);
				setState(33);
				match(T__2);
				}
			}

			setState(37);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopblockContext extends ParserRuleContext {
		public LoopblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loopblock; }
	 
		public LoopblockContext() { }
		public void copyFrom(LoopblockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoopBlockContext extends LoopblockContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public LoopBlockContext(LoopblockContext ctx) { copyFrom(ctx); }
	}

	public final LoopblockContext loopblock() throws RecognitionException {
		LoopblockContext _localctx = new LoopblockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_loopblock);
		int _la;
		try {
			_localctx = new LoopBlockContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__0);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__30) | (1L << T__31) | (1L << T__41) | (1L << T__42) | (1L << T__44) | (1L << STRING) | (1L << BOOLEAN) | (1L << INTEGER) | (1L << FLOAT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(40);
				stmt();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(46);
				match(T__4);
				setState(47);
				match(T__2);
				}
			}

			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(50);
				match(T__5);
				setState(51);
				match(T__2);
				}
			}

			setState(54);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ImportStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ImportStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class WhileStmtContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ClassStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public ClassStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class TypeStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TypeStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarationStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclarationStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ExprStmtContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class IfStmtContext extends StmtContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class MatchStmtContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MatchparamsContext matchparams() {
			return getRuleContext(MatchparamsContext.class,0);
		}
		public MatchStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class AccessAssignmentStmtContext extends StmtContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(dymeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(dymeParser.IDENTIFIER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AccessAssignmentStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ModuleStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ModuleStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class EnumStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public EnumsContext enums() {
			return getRuleContext(EnumsContext.class,0);
		}
		public EnumStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ForEachStmtContext extends StmtContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(dymeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(dymeParser.IDENTIFIER, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForEachStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class AssignmentStmtContext extends StmtContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentStmtContext(StmtContext ctx) { copyFrom(ctx); }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		int _la;
		try {
			int _alt;
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new DeclarationStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(T__6);
				setState(57);
				match(IDENTIFIER);
				setState(58);
				match(T__7);
				setState(59);
				expr(0);
				setState(60);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new ForEachStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(T__8);
				setState(63);
				match(IDENTIFIER);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__9) {
					{
					setState(64);
					match(T__9);
					setState(65);
					match(IDENTIFIER);
					}
				}

				setState(68);
				match(T__10);
				setState(69);
				expr(0);
				setState(70);
				block();
				}
				break;
			case 3:
				_localctx = new WhileStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				match(T__11);
				setState(73);
				expr(0);
				setState(74);
				block();
				}
				break;
			case 4:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				match(T__12);
				setState(77);
				expr(0);
				setState(78);
				block();
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(79);
						match(T__13);
						setState(80);
						match(T__12);
						setState(81);
						expr(0);
						setState(82);
						block();
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__13) {
					{
					setState(89);
					match(T__13);
					setState(90);
					block();
					}
				}

				}
				break;
			case 5:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(T__14);
				setState(94);
				match(IDENTIFIER);
				setState(95);
				match(T__2);
				}
				break;
			case 6:
				_localctx = new MatchStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(96);
				match(T__15);
				setState(97);
				expr(0);
				setState(98);
				match(T__0);
				setState(99);
				matchparams();
				setState(100);
				match(T__3);
				}
				break;
			case 7:
				_localctx = new ModuleStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(102);
				match(T__16);
				setState(103);
				match(IDENTIFIER);
				}
				break;
			case 8:
				_localctx = new TypeStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(104);
				match(T__17);
				setState(105);
				match(IDENTIFIER);
				setState(106);
				match(T__7);
				setState(107);
				args();
				setState(108);
				match(T__2);
				}
				break;
			case 9:
				_localctx = new EnumStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(110);
				match(T__17);
				setState(111);
				match(IDENTIFIER);
				setState(112);
				match(T__7);
				setState(113);
				enums();
				setState(114);
				match(T__2);
				}
				break;
			case 10:
				_localctx = new ClassStmtContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(116);
				match(T__18);
				setState(117);
				match(IDENTIFIER);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__19) {
					{
					setState(118);
					match(T__19);
					setState(119);
					args();
					setState(120);
					match(T__20);
					}
				}

				setState(124);
				match(T__7);
				setState(125);
				block();
				}
				break;
			case 11:
				_localctx = new AssignmentStmtContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(126);
				match(IDENTIFIER);
				setState(127);
				match(T__7);
				setState(128);
				expr(0);
				setState(129);
				match(T__2);
				}
				break;
			case 12:
				_localctx = new AccessAssignmentStmtContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(131);
				match(IDENTIFIER);
				setState(132);
				match(T__21);
				setState(133);
				match(IDENTIFIER);
				setState(134);
				match(T__7);
				setState(135);
				expr(0);
				setState(136);
				match(T__2);
				}
				break;
			case 13:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(138);
				expr(0);
				setState(139);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchparamsContext extends ParserRuleContext {
		public List<MatchparamContext> matchparam() {
			return getRuleContexts(MatchparamContext.class);
		}
		public MatchparamContext matchparam(int i) {
			return getRuleContext(MatchparamContext.class,i);
		}
		public MatchparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchparams; }
	}

	public final MatchparamsContext matchparams() throws RecognitionException {
		MatchparamsContext _localctx = new MatchparamsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchparams);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			matchparam();
			{
			setState(144);
			match(T__9);
			setState(145);
			matchparam();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchparamContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MatchparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchparam; }
	}

	public final MatchparamContext matchparam() throws RecognitionException {
		MatchparamContext _localctx = new MatchparamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			expr(0);
			setState(148);
			match(T__22);
			setState(149);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(dymeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(dymeParser.IDENTIFIER, i);
		}
		public EnumsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enums; }
	}

	public final EnumsContext enums() throws RecognitionException {
		EnumsContext _localctx = new EnumsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enums);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(IDENTIFIER);
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				match(T__23);
				setState(153);
				match(IDENTIFIER);
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__23 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AccessObjectFnExprContext extends ExprContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(dymeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(dymeParser.IDENTIFIER, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public AccessObjectFnExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FuncContext extends ExprContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public FuncContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NewClassObjExprContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public NewClassObjExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TypeCheckExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public TypeCheckExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ConditionalExprContext extends ExprContext {
		public Token operatorToken;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ConditionalExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class RangeExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OptionContext option() {
			return getRuleContext(OptionContext.class,0);
		}
		public RangeExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class UnaryExprContext extends ExprContext {
		public Token operatorToken;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnaryExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class IndexExprContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IndexExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FuncCallContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FuncCallContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class MultiplicativeExprContext extends ExprContext {
		public Token operatorToken;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MultiplicativeExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AtomicExprContext extends ExprContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public AtomicExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ExponentialExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExponentialExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AdditiveExprContext extends ExprContext {
		public Token operatorToken;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AdditiveExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NewExprContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public AssignArgsContext assignArgs() {
			return getRuleContext(AssignArgsContext.class,0);
		}
		public NewExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class CastExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(dymeParser.IDENTIFIER, 0); }
		public CastExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class InListExprContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InListExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ParenthesizedExprContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParenthesizedExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ListExprContext extends ExprContext {
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ListExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AccessObjectExprContext extends ExprContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(dymeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(dymeParser.IDENTIFIER, i);
		}
		public AccessObjectExprContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TestExprContext extends ExprContext {
		public Token operatorToken;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TestExprContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				_localctx = new ParenthesizedExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
